--- a/Subject1.html
+++ b/Subject1.html
@@ -12,18 +12,18 @@
 <tbody>
 <tr>
 <td style="width: 294.4px; font-family: &#39;Sarabun&#39;, sans-serif;"><strong>การสอบกลางภาคเรียนที่ 1 </strong></td>
-<td style="width: 268.8px; text-align: right; font-family: &#39;Sarabun&#39;, sans-serif;"><strong>ประจำปีการศึกษา 2564</strong></td>
+<td style="width: 268.8px; text-align: center; font-family: &#39;Sarabun&#39;, sans-serif;"><strong>ประจำปีการศึกษา 2564</strong></td>
 </tr>
 <tr>
-<td style="width: 294.4px; font-family: &#39;Sarabun&#39;, sans-serif;"><strong>รหัสวิชา 020413207&nbsp; วิชา&nbsp; คอมพิวเตอร์กราฟิกส์ (Computer Graphics)</strong></td>
-<td style="width: 268.8px; text-align: right; font-family: &#39;Sarabun&#39;, sans-serif;"><strong>ตอนที่ 1</strong></td>
+<td style="width: 294.4px; font-family: &#39;Sarabun&#39;, sans-serif;"><strong>รหัสวิชา 020413207&nbsp; วิชา&nbsp; Teaching ll (Computer Graphics)</strong></td>
+<td style="width: 268.8px; text-align: center; font-family: &#39;Sarabun&#39;, sans-serif;"><strong>ตอนที่ 1</strong></td>
 </tr>
 <tr>
-<td style="width: 294.4px; font-family: &#39;Sarabun&#39;, sans-serif;"><strong>สอบวันที่ &nbsp;6 กันยายน &nbsp;พ.ศ. 2564 </strong></td>
-<td style="width: 268.8px; text-align: right; font-family: &#39;Sarabun&#39;, sans-serif;"><strong>เวลา 13.00 น. ถึง 16.00 น.</strong></td>
+<td style="width: 294.4px; font-family: &#39;Sarabun&#39;, sans-serif;"><strong>สอบวันที่ &nbsp;10 กันยายน &nbsp;พ.ศ. 2564 </strong></td>
+<td style="width: 268.8px; text-align: center; font-family: &#39;Sarabun&#39;, sans-serif;"><strong>เวลา 13.00 น. ถึง 16.00 น.</strong></td>
 </tr>
 <tr>
-<td style="width: 294.4px; font-family: &#39;Sarabun&#39;, sans-serif;"><strong>อาจารย์ผู้ออกข้อสอบ ดร.สมคิด แซ่หลี</strong></td>
+<td style="width: 294.4px; font-family: &#39;Sarabun&#39;, sans-serif;"><strong>อาจารย์ผู้ออกข้อสอบ นางสาวปิยาพัชร ยอดทอง</strong></td>
 <td style="width: 268.8px; text-align: right;">&nbsp;</td>
 </tr>
 </tbody>
@@ -31,13 +31,13 @@
 <p style="font-family: &#39;Sarabun&#39;, sans-serif;"><strong>คำสั่งข้อสอบ</strong></p>
 <ol>
 <li dir="ltr" style="font-family: &#39;Sarabun&#39;, sans-serif;" aria-level="1">
-<p dir="ltr" role="presentation">ข้อสอบมีทั้งหมด&nbsp; 5&nbsp; ข้อ&nbsp; คะแนนเต็ม&nbsp; 50&nbsp; คะแนน&nbsp;&nbsp;&nbsp;</p>
+<p dir="ltr" role="presentation">ข้อสอบมีทั้งหมด&nbsp; 6&nbsp; ข้อ&nbsp; คะแนนเต็ม&nbsp; 6&nbsp; คะแนน&nbsp;&nbsp;&nbsp;</p>
 </li>
 <li dir="ltr" style="font-family: &#39;Sarabun&#39;, sans-serif;" aria-level="1">
 <p dir="ltr" role="presentation">ทำทุกข้อในข้อสอบออนไลน์</p>
 </li>
 <li dir="ltr" style="font-family: &#39;Sarabun&#39;, sans-serif;" aria-level="1">
-<p dir="ltr" role="presentation">ก่อนเวลาสอบอย่างน้อย 15 นาที นักศึกษาจะต้องร่วมห้องประชุมออนไลน์ที่ <a href="https://meet.google.com/YourJoinCode">https://meet.google.com/YourJoinCode</a> โดยใช้อุปกรณ์ตัวที่สอง (มือถือ หรือ Tablet)&nbsp; เปิดกล้องตลอดการสอบ จัดมุมมองให้เห็น หน้านักศึกษา มือทั้งสองข้างของนักศึกษา และหน้าจอคอมพิวเตอร์ที่ใช้ในการสอบนี้</p>
+<p dir="ltr" role="presentation">ก่อนเวลาสอบอย่างน้อย 15 นาที นักศึกษาจะต้องร่วมห้องประชุมออนไลน์ที่ <a href="https://meet.google.com/xcc-ofwx-oiw?authuser=0">https://meet.google.com/xcc-ofwx-oiw?authuser=0</a> โดยใช้อุปกรณ์ตัวที่สอง (มือถือ หรือ Tablet)&nbsp; เปิดกล้องตลอดการสอบ จัดมุมมองให้เห็น หน้านักศึกษา มือทั้งสองข้างของนักศึกษา และหน้าจอคอมพิวเตอร์ที่ใช้ในการสอบนี้</p>
 </li>
 <li dir="ltr" style="font-family: &#39;Sarabun&#39;, sans-serif;" aria-level="1">
 <p dir="ltr" role="presentation">นักศึกษาได้ติดตั้งโปรแกรม <a href="https://safeexambrowser.org/download_en.html">Safe Exam Browser</a> เรียบร้อยแล้ว</p>
@@ -75,7 +75,7 @@
 </tbody>
 </table>
 <p>&nbsp;</p>
-<h2 style="text-align: center; font-family: &#39;Sarabun&#39;, sans-serif;"><strong><span style="color: #0000ff;"><a style="color: #0000ff;" href="sebs://github.com/ajarnlee/SEBlink/raw/main/kmutnbPreTestExam.seb">คลิ๊กเพื่อเริ่มทำข้อสอบ</a></span></strong></h2>
+<h2 style="text-align: center; font-family: &#39;Sarabun&#39;, sans-serif;"><strong><span style="color: #0000ff;"><a style="color: #0000ff;" href="https://github.com/piyapath04/SEBlink/raw/main/Teaching%20ll.seb">คลิ๊กเพื่อเริ่มทำข้อสอบ</a></span></strong></h2>
       
   
 </body></html>
