--- a/Subject1.html
+++ b/Subject1.html
@@ -6,7 +6,7 @@
   </head>
   <body> 
 <p></p>
-<table cellspacing="8" cellpadding="8" style=" border:2px DASHED #FF7DBE;background-color: #FF7DBE" width=470><tbody><tr><td align="right" valign="middle" style="background-color: #FF9DCE"><table border="0" cellspacing="8" cellpadding="8" width=470 style=" background-color: #FFBFDF"><tbody><tr><td align="right" style=" border:2px DASHED #FFDFEF;background-color: #FFDFEF">
+<table cellspacing="8" cellpadding="8" style=" border:2px DASHED #FF7DBE;background-color: #FF7DBE" width=800><tbody><tr><td align="left" valign="middle" style="background-color: #FF9DCE"><table border="0" cellspacing="8" cellpadding="8" width=800 style=" background-color: #FFBFDF"><tbody><tr><td align="left" style=" border:2px DASHED #FFDFEF;background-color: #FFDFEF">
 <p style="text-align: center; font-family: &#39;Sarabun&#39;, sans-serif;"><strong>คณะครุศาสตร์อุตสาหกรรม</strong></p>
 <p style="text-align: center; font-family: &#39;Sarabun&#39;, sans-serif;"><strong>มหาวิทยาลัยเทคโนโลยีพระจอมเกล้าพระนครเหนือ</strong></p>
 <table style="height: 25px;" width="900">
@@ -77,6 +77,6 @@
 </table>
 <p>&nbsp;</p>
 <h2 style="text-align: center; font-family: &#39;Sarabun&#39;, sans-serif;"><strong><span style="color: #0000ff;"><a style="color: #0000ff;" href="https://github.com/piyapath04/SEBlink/raw/main/Teaching%20ll.seb">คลิ๊กเพื่อเริ่มทำข้อสอบ</a></span></strong></h2>
-      
+   </td></tr></tbody></table></td></tr></tbody></table>   
 
 </body></html>
