--- a/Subject1.html
+++ b/Subject1.html
@@ -6,7 +6,9 @@
   </head>
   <body> 
 <p></p>
-<table cellspacing="8" cellpadding="8" style=" border:2px DASHED #FF7DBE;background-color: #FF7DBE" width=800><tbody><tr><td align="left" valign="middle" style="background-color: #FF9DCE"><table border="0" cellspacing="8" cellpadding="8" width=800 style=" background-color: #FFBFDF"><tbody><tr><td align="left" style=" border:2px DASHED #FFDFEF;background-color: #FFDFEF">
+<table cellspacing="8" cellpadding="8" style=" border:5px DASHED #FF7DBE;background-color: #FF7DBE" width=800><tbody><tr><td align="left" valign="middle" 
+        style="background-color: #FF9DCE"><table border="0" cellspacing="8" cellpadding="8" width=800 style=" background-color: #FFBFDF"><tbody><tr><td align="left" 
+        style=" border:5px DASHED #FFDFEF;background-color: #FFDFEF">
 <p style="text-align: center; font-family: &#39;Sarabun&#39;, sans-serif;"><strong>คณะครุศาสตร์อุตสาหกรรม</strong></p>
 <p style="text-align: center; font-family: &#39;Sarabun&#39;, sans-serif;"><strong>มหาวิทยาลัยเทคโนโลยีพระจอมเกล้าพระนครเหนือ</strong></p>
 <table style="height: 25px;" width="900">
