--- a/Subject1.html
+++ b/Subject1.html
@@ -18,7 +18,7 @@
 <td style="width: 268.8px; text-align: center; font-family: &#39;Sarabun&#39;, sans-serif;"><strong>ประจำปีการศึกษา 2564</strong></td>
 </tr>
 <tr>
-<td style="width: 294.4px; font-family: &#39;Sarabun&#39;, sans-serif;"><strong>รหัสวิชา 020003231&nbsp; วิชา&nbsp; Teaching ll (Computer Graphics)</strong></td>
+<td style="width: 294.4px; font-family: &#39;Sarabun&#39;, sans-serif;"><strong>รหัสวิชา 020003231&nbsp; วิชา&nbsp; Teaching ll </strong></td>
 <td style="width: 268.8px; text-align: center; font-family: &#39;Sarabun&#39;, sans-serif;"><strong>ตอนที่ 1</strong></td>
 </tr>
 <tr>
